Fix text-align toi

--- a/app/assets/stylesheets/jukevox_style.css
+++ b/app/assets/stylesheets/jukevox_style.css
@@ -76,6 +76,7 @@ h1 {
 }
 
 #toi {
+	text-align: right;
 	font-size: 1.4em;
 	font-family: 'Montserrat', sans-serif;
 }
